--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,10 @@
 @import "tailwindcss";
 
+#root {
+  height: 100dvh; 
+  display: flex;
+  flex-direction: column;
+}
 
 html, body {
   margin: 0;
